# wrapex

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: notes_on_comparing_cosmo_and_sqlrooms_implementations.md
examples/api-call-wrap/: README.md
examples/event-handler-wrap/: README.md
examples/redux-action-wrap/: README.md
examples/zustand-store-wrap/: README.md
py-tests/: test_data_access.py  test_data_integrity.py
python/wrapex/: __init__.py  _data.py  _paths.py
rules/: command-categories.md  command-naming.md  when-clause-conventions.md
schemas/: command-candidate.schema.ts  diagnosis-report.schema.ts  refactoring-plan.schema.ts
scripts/: sync-py-data.sh
skills/: 01-diagnose.md  02-plan.md  03-scaffold.md  04-wrap.md  05-enrich.md  06-wire-palette.md  07-wire-shortcuts.md  08-wire-telemetry.md  09-wire-ai-tools.md  10-wire-mcp.md  11-wire-tests.md  12-wire-feature-flags.md  13-wire-palette-params.md
src/: command-registry.ts  define-command.ts  index.ts  middleware-pipeline.ts  portable-schema.ts  telemetry-middleware.ts  validation-middleware.ts
templates/: ai-tools-adapter.ts  command-definition.ts.template  command-registry.ts  define-command.ts  mcp-adapter.ts  middleware-pipeline.ts  palette-adapter.ts  param-collector.ts  telemetry-middleware.ts  test-generator.ts  validation-middleware.ts
ts-tests/: command-registry.test.ts  define-command.test.ts  middleware.test.ts  schemas.test.ts
(+8 files in other folders)
